syntax = "proto3";

package weather;

message WeatherRequest {
    string city = 1;
}

message WeatherResponse {
    string result = 1;
}

service WeatherService {
    rpc Weather(WeatherRequest) returns(WeatherResponse);//Unary
    rpc WeatherManyTimes(WeatherRequest) returns(stream WeatherResponse);//Server-streaming
    rpc WeatherExact(stream WeatherRequest) returns(WeatherResponse);//Client streaming
    rpc WeatherMutual(stream WeatherRequest) returns(stream WeatherResponse);//Bi-directional streaming
}